--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.7.0",
+    "@astrojs/image": "^0.8.0",
     "@astrojs/mdx": "^0.11.1",
     "@astrojs/prefetch": "^0.0.7",
     "@astrojs/react": "^1.1.2",
     "@astrojs/rss": "^1.0.0",
     "@astrojs/sitemap": "^1.0.0",
-    "@astrojs/tailwind": "^1.0.1",
+    "@astrojs/tailwind": "^2.0.1",
     "@fontsource/lato": "^4.5.9",
     "astro": "^1.1.8",
     "mdast-util-to-string": "^3.1.0",
@@ -25,7 +25,8 @@
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-external-links": "^2.0.1",
-    "rehype-slug": "^5.0.1"
+    "rehype-slug": "^5.0.1",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.20"
